<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@android:color/holo_orange_dark"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_okhttp"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_get_post"
        android:text="@string/okhttp_btn_get_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_post"
        android:text="@string/okhttp_btn_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_get_okhttputils"
        android:text="@string/okhttp_btn_get_okhttputils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_downloadfile"
        android:text="@string/okhttp_btn_downloadfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_loadimage"
        android:text="@string/load_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_loadimage_list"
        android:text="@string/load_image_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_result"
        android:text="@string/okhttp_tv_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/pb_progressBar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_loadimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>