<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/titlebar" />

    <Button
        android:id="@+id/btn_native_tojavaobject"
        android:text="@string/native_tv_tojavaobject"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_native_tojavalist"
        android:text="@string/native_tv_tojavalist"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_native_complex"
        android:text="@string/native_tv_complex"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_native_special"
        android:text="@string/native_tv_special"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:text="@string/native_tv_original"
            android:textSize="18sp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_native_original"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/native_tv_changedata"
            android:textSize="18sp"
            android:textColor="@android:color/holo_orange_dark"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/tv_native_changedata"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            </LinearLayout>

    </ScrollView>
</LinearLayout>