<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/titlebar"/>

    <Button
        android:id="@+id/btn_glide_base"
        android:text="@string/glide_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_glide_rl_load"
        android:text="@string/glide_base_rl_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_glide_base_change"
        android:text="@string/glide_base_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>